# iota-lite-poc

./: Cargo.toml  PROPOSAL.md  README.md
src/: lib.rs  proof.rs
tests/: grpc_transaction_proof.rs
